--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -69,8 +69,8 @@
 
       "sustainability" : "Sustainability",
       "we-are-energy":"We are a part of the energy revolution",
-      "we-are-energy-description": "We take the lead in responsible mining while delivering lasting value to communities, protecting the environment, and meeting the expectations of our stakeholders.",
-      "we-are-energy-description1":"We have taken steps to track, actively reduce and offset our carbon emissions and utilise eco-conscious mining methods and technology.",
+      "we-are-energy-description": "We take our values seriously and hold ourselves accountable to the communities where we operate and the greater good of the planet. We support the UN’s mission to ensure that by 2030 all people enjoy peace and prosperity and do our part to contribute to the Global Sustainability Development Goals.",
+      "we-are-energy-description1":"We take the lead in responsible mining while delivering lasting value to communities, protecting the environment, and meeting the expectations of our stakeholders.",
 
 
       "blog-post-section": "Blog Post",
@@ -162,7 +162,7 @@
 
         "projects-title": "Projects",
         "projects-sub-title": "Projects",
-        "project-description-1": "Trinity Metals has three mining projects operated as subsidiaries in Rwanda – Rutongo Mines, Nyakabingo Mine, and Musha Mines. They compromise of three primary mining sites with several satellite mining sites located in close proximity to the primary sites.",
+        "project-description-1": "Trinity Metals has three mining projects operated as subsidiaries in Rwanda – Rutongo Mines, Nyakabingo Mine, and Musha Mines. <br>They compromise of three primary mining sites with several satellite mining sites located in close proximity to the primary sites.",
         "project-description-2": "Our mining sites operate to national and international mining regulations and uphold strict ESG standards. We do not use toxic or environmentally damaging chemical processes on our mines, nor do the mines produce any such material.",
         "project-description-3": "Our production is certified “conflict-free” – our mines are fully compliant with conflict minerals audit requirements under OECD guidelines.",
 
