--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -254,20 +254,20 @@
     "sustainability-page-title": "Sustainability",
 
     "sustainability-into-left-header":"We are a part of the energy revolution",
-    "sustainability-into-left-header-desc": "We take our values seriously and hold ourselves accountable to the communities where we operate and the greater good of the planet. We support the UN’s mission to ensure that by 2030 all people enjoy peace and prosperity and do our part to contribute to the Global Sustainability Development Goals.",
+    "sustainability-into-left-header-desc": "At Trinity Metals, we take our values seriously and hold ourselves accountable to the communities where we operate and the greater good of the planet. We support the UN’s mission to ensure that by 2030 all people enjoy peace and prosperity and do our part to contribute to the Global Sustainability Development Goals.",
 
     "sustainability-into-right-header": "Our Approach",
     "sustainability-into-right-header-desc":"We take the lead in responsible mining while delivering lasting value to communities, protecting the environment, and meeting the expectations of our stakeholders. Throughout the project lifecycle, we work in close partnership with stakeholders to ensure our activities contribute meaningfully to social progress, economic empowerment, and ecological integrity.",
     
 
      "water-management-title": "Water management",
-     "water-management-desc": "We recognize our responsibility to manage water with care, efficiency and transparency. Our goal is to operate within local water limits while contributing to watershed health and long-term community resilience, focusing on minimizing freshwater withdrawal, improving water recycling and reuse, and preventing contamination of surface and groundwater sources.",
+     "water-management-desc": "We recognize our responsibility to manage water with care, efficiency and transparency. Our goal is to operate within regulatory standards while contributing to watershed health and long-term community resilience, focusing on minimizing freshwater withdrawal, improving water recycling and reuse, and preventing contamination of surface and groundwater sources.",
      
      "approach-to-Tailings-title": "Tailings and waste storage",
       "approach-to-Tailings-desc": "Responsible tailings management is a core part of our environmental stewardship. Tailings—the residues left after mineral extraction—can pose significant risks if not properly handled. That’s why we adhere to globally recognized best practices, invest in risk mitigation technologies, and maintain open dialogue with surrounding communities. Our approach goes beyond compliance; it reflects our deep commitment to safety, sustainability, and building trust at every stage of our operations.",
 
       "approach-to-closure-management-title": "Closure management",
-      "approach-to-closure-management-desc1": "We plan for closure with a focus on long-term environmental stability, community resilience and sustainable land use.",
+      "approach-to-closure-management-desc1": "We plan for closure with a focus on long-term environmental stability, community resilience and sustainable land use. Our approach is built on early engagement, progressive rehabilitation and collaboration with host communities to ensure that post-mining landscapes are safe, productive, and beneficial. We integrate closure planning into every phase of the mine life cycle, aligning with international best practices and local expectations.",
       "approach-to-closure-management-desc2": "Our approach is built on early engagement, progressive rehabilitation and collaboration with host communities to ensure that post-mining landscapes are safe, productive, and beneficial. We integrate closure planning into every phase of the mine life cycle, aligning with international best practices and local expectations.",
 
 
@@ -280,6 +280,8 @@
 
 
     "community-title": "Community",
+    "community-description1": "At Trinity, we believe mining can be a catalyst for inclusive economic growth and stronger communities. With a workforce that is 99% local, we are committed to empowering our people to lead and participate in initiatives that strengthen the well-being of their communities. We engage with community members at every stage of the mining lifecycle, ensuring our presence contributes positively to people’s lives. ",
+    "community-description2": "Our approach emphasizes opening pathways into formal employment, supporting diverse and sustainable livelihood opportunities, and promoting health, safety, and well-being. We also work to expand opportunities for women, youth, and vulnerable groups to ensure that the benefits of mining are shared broadly across communities. Through strong partnerships and open dialogue, we aim to reflect local priorities, foster long-term resilience, and uphold transparency, accountability, and continuous improvement so that our operations leave lasting, positive impacts.",
     "community-subtitle": "We are a part of the energy revolution",
     "community-desc": "We believe the mining industry is vital in generating job growth and inclusive economic opportunities. Our workforce, which is 99% local,  is empowered and enabled to lead and participate in programs that impact  the well-being of people in their communities. We consider community members at every phase of our mining lifecycle and have launched initiatives to ensure their lives are better off because of our presence. ",
     "community-list1": "Integrated Unauthorised Miner Strategy:",
