--- a/public/locales/kiny/translation.json
+++ b/public/locales/kiny/translation.json
@@ -45,11 +45,11 @@
       "view-project-button": "Reba Imishinga",
 
 
-      "home-about-heading": "Umuyobozi mu by’Ubucukuzi",
+      "home-about-heading": "Turayoboye mu bucukuzi bw’amabuye y’agaciro",
       "about-tab-who-we-are": "Abo Turi Bo",
       "about-tab-vision": "Icyerekezo Cyacu",
       "about-tab-mission": "Inshingano Yacu",
-      "who-we-are-content": "Trinity Metals ni ikigo gitunganya amabuye y'agaciro ya gasegereti (t)in, ibyuma bikozwe muri wolufuramu (tungstène) na koruta (tantalum). Mu mikorere yacu dushyira imbere uburyo bwo kubungabunga ibidukikije n'imico mbonera y'ubumuntu mu mfuruka zose z'ibikorwa byacu by'ubushabitsi.",
+      "who-we-are-content": "Trinity Metals ni ikigo gitunganya amabuye y'agaciro ya gasegereti (Tin), wolufuramu (tungstène) na koruta (tantalum). Mu mikorere yacu dushyira imbere uburyo bwo kubungabunga ibidukikije n'imico mbonera y'ubumuntu mu mfuruka zose z'ibikorwa byacu by'ubushabitsi.",
       "our-vision-content": "Dukora itandukaniro mu Isi binyuze mu gutanga ibikoresho byifashishwa mu ikoranabuhanga rigezweho byizewe.",
       "our-mission-content": "Dufite inshingano yo gutunganya ibyuma byujuje ubuziranenge binyuze mu bikorwa bibungabunga ibidukikije kandi hakurikijwe amahame y'ubushabitsi.",
       "employees":"Abakozi",
@@ -106,7 +106,7 @@
       "our-vision-description" : "Dukora itandukaniro mu Isi binyuze mu gutanga ibikoresho byifashishwa mu ikoranabuhanga rigezweho bikomeye.",
 
 
-      "our-values-section-title": "indangagaciro Zacu",
+      "our-values-section-title": "Indangagaciro Zacu",
       "we-empower": "Twongerera Ubushobozi & Tukanazana Impinduka",
       "we-empower-description": "Tuzamura abaturage dushora imari muri gahunda ziteza imbere impano zabo tukanazamura ubukungu bwabo.",
       "we-do-no-warm": "Ntitwangiza",
@@ -114,7 +114,7 @@
       "we-set-standard": "Twashyizeho amahame",
       "we-set-standard-description": "Nk’ikigo kiyoboye ibindi mu bucukuzi bw’amabuye y'agaciro, dukurikiza amahame mpuzamahanga kandi dukomeza kunoza imikorere yacu.",
       "we-hold-ourselves-accountable": "Twita ku inshingano zacu",
-      "we-hold-ourselves-accountable-description": "Twese twitter ku nshingano zacu, dukurikiza amategeko, turisuzuma ubwacu, kandi tugakemura ibibazo kugira ngo dukomeze gukora neza.",
+      "we-hold-ourselves-accountable-description": "Twese twita ku nshingano zacu, dukurikiza amategeko, turisuzuma ubwacu, kandi tugakemura ibibazo kugira ngo dukomeze gukora neza.",
 
 
 
