--- a/locales/kiny/translation.json
+++ b/locales/kiny/translation.json
@@ -388,29 +388,30 @@
 
 
   "Contact":{
-    "contact-details": "We will get back to you within 24 hours, or you can call us everyday, 08:00am to 5:00pm",
+    "contact-details": "Tuzakugarukira mu masaha 24, cyangwa urashobora kuduhamagara burimunsi, 08:00 am kugeza 5:00 pm",
     "contact-tel":"+250 791 959 034",
-    "get-in-touch": "Get In Touch",
+    "get-in-touch": "Tumenyeshe",
     "field-wrapper-name-placeholder": "name",
     "field-wrapper-email-placeholder": "email",
     "field-wrapper-number-placeholder": "Phone",
     "field-wrapper-message-placeholder": "Additional Details",
-    "field-wrapper-sendbtn": "Send Message",
+    "field-wrapper-sendbtn": "Ohereza ubutumwa",
 
-    "location-rutongo-name": "Rutongo Mines",
-    "location-rutongo-details-email": "Email: rutongo@trinity-metals.com",
-    "location-rutongo-detaisl-address": "Address: P.O Box: 749 , Shyorongi, Rulindo",
-    "location-rutongo-detaisl-phone": "Phone: +250 791 345 409",
+    "location-rutongo-name": "Ibirombe bya Rutongo",
+    "location-rutongo-details-email": "Imeri: rutongo@trinity-metals.com",
+    "location-rutongo-detaisl-address": "Aderesi: P.O Agasanduku: 749 , Shyorongi, Rulindo",
+    "location-rutongo-detaisl-phone": "Terefone: +250 791 345 409",
 
-    "location-nyakabingo-name": "Nyakabingo Mine",
-    "location-nyakabingo-details-email": "Email: Nyakabingo@trinity-metals.com",
-    "location-nyakabingo-detaisl-address": "Address: P.O Box: 749 , Shyorongi, Rulindo",
-    "location-nyakabingo-detaisl-phone": "Phone: +250 791 345 409",
+    "location-nyakabingo-name": "Ikirombe cya Nyakabingo",
+    "location-nyakabingo-details-email": "Imeri: Nyakabingo@trinity-metals.com",
+    "location-nyakabingo-detaisl-address": "Aderesi: P.O Agasanduku: 749 , Shyorongi, Rulindo",
+    "location-nyakabingo-detaisl-phone": "Terefone: +250 791 345 409",
   
-     "location-musha-name": "Musha Mines",
-    "location-musha-details-email": "Email: musha@trinity-metals.com",
-    "location-musha-detaisl-address": "Address: P.O Box: 3824  Musha, Rwamagana",
-    "location-musha-detaisl-phone": "Phone: +250 789 312 308"
+     "location-musha-name": "Ibirombe bya Musha",
+    "location-musha-details-email": "Imeri: musha@trinity-metals.com",
+    "location-musha-detaisl-address": "Aderesi: P.O Agasanduku: 3824 Musha, Rwamagana",
+    "location-musha-detaisl-phone": "Terefone: +250 789 312 308"
+     
 
 
 
